--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/db": "^0.8.8",
+    "@astrojs/netlify": "^5.2.0",
     "astro": "^4.5.8"
   },
   "devDependencies": {
