--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "dev-db": "astro dev --remote",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/db": "^0.8.8",
     "@astrojs/netlify": "^5.2.0",
+    "@astrojs/node": "^8.2.5",
     "astro": "^4.5.8"
   },
   "devDependencies": {
