--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.5.9",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.0.0",
     "typescript": "^5.4.2"
   }
 }
